better cursor positioning and blink

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
   </head>
 
   <body>
-    <pre id="content"></pre>
+    <pre id="content"><code>
+       ________________ 
+      < Collab - 0.1.0 >
+       ---------------- 
+              \   ^__^
+               \  (oo)\_______
+                  (__)\       )\/\
+                      ||----w |
+                      ||     ||
+    </code></pre>
     <pre id="powerline" class="powerline"></pre>
+    <div id="cursor" class="cursor"></div>
 
     <script src="bower_components/jquery/jquery.min.js"></script>
     <script src="bower_components/highlightjs/highlight.pack.js"></script>
