--- a/index.html
+++ b/index.html
@@ -3,27 +3,14 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link href="bower_components/highlightjs/styles/solarized_dark.css" rel="stylesheet">
+    <link href="stylesheets/theme.css" rel="stylesheet">
     <link href="stylesheets/fonts.css" rel="stylesheet">
     <link href="stylesheets/main.css" rel="stylesheet">
   </head>
 
   <body>
-    <pre id="content"><code>
-       ________________ 
-      < Collab - 0.1.0 >
-       ---------------- 
-              \   ^__^
-               \  (oo)\_______
-                  (__)\       )\/\
-                      ||----w |
-                      ||     ||
-    </code></pre>
-    <pre id="powerline" class="powerline"></pre>
-    <div id="cursor" class="cursor"></div>
-
-    <script src="bower_components/jquery/jquery.min.js"></script>
-    <script src="bower_components/highlightjs/highlight.pack.js"></script>
-    <script src="javascripts/application.js"></script>
+    <script src="javascripts/jquery.js"></script>
+    <script src="javascripts/highlight.js"></script>
+    <script src="javascripts/application.pack.js"></script>
   </body>
 </html>
