refactoring and added tv feature

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   </head>
 
   <body>
+    <pre id="content" class="content"></pre>
+    <div id="cursor" class="cursor"></div>
+    <div id="powerline" class="powerline">
+      <span id="filename" class="filename"></span>
+      <label class="tv"><input id="tv" type="checkbox">TV Mode</label>
+      <span id="online" class="online"></span>
+    </div>
+
     <script src="javascripts/jquery.js"></script>
     <script src="javascripts/application.pack.js"></script>
   </body>
