--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <div class="editor">
         <pre id="content" class="content"></pre>
         <div id="cursor" class="cursor"></div>
+        <div id="powerline" class="powerline"></div>
       </div>
     </div>
 
