added link to vim plugin

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
         <h3>Links</h3>
         <div class="list-group">
+          <a href="https://github.com/dennis84/vim-collab" class="list-group-item">VIM Plugin</a>
           <a href="https://github.com/dennis84/collab" class="list-group-item">Source Code</a>
         </div>
       </div>
