small design updates

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
       <div class="editor">
         <pre id="content" class="content"></pre>
         <div id="cursor" class="cursor"></div>
-        <div id="powerline" class="powerline"></div>
+        <div id="powerline" class="powerline">
+          <span id="filename" class="filename"></span>
+        </div>
       </div>
     </div>
 
