focus nickname field, renamed: change-username -> change-nick

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <ul class="list-group">
             <li class="list-group-item">Follow Cursor <input id="follow" type="checkbox" class="pull-right"></li>
             <li class="list-group-item">Online <span id="online" class="label label-primary pull-right"></span></li>
-            <li class="list-group-item"><a href="#" id="change-username">Change Username</a></li>
+            <li class="list-group-item"><a href="#" id="change-nick">Change Nickname</a></li>
           </ul>
 
           <h3>Who's Online</h3>
