some navigation improvements

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div id="navigation" class="navigation">
         <h3>Collab</h3>
         <ul class="list-group">
-          <li class="list-group-item"><a href="https://github.com/dennis84/vim-collab">VIM Plugin</a></li>
-          <li class="list-group-item"><a href="https://github.com/dennis84/collab">Source Code</a></li>
+          <li class="list-group-item linked"><a href="https://github.com/dennis84/vim-collab">VIM Plugin</a></li>
+          <li class="list-group-item linked"><a href="https://github.com/dennis84/collab">Source Code</a></li>
         </ul>
 
         <div id="settings" class="hidden">
@@ -22,7 +22,7 @@
           <ul class="list-group">
             <li class="list-group-item">Follow Cursor <input id="follow" type="checkbox" class="pull-right"></li>
             <li class="list-group-item">Online <span id="online" class="label label-primary pull-right"></span></li>
-            <li class="list-group-item"><a href="#" id="change-nick">Change Nickname</a></li>
+            <li class="list-group-item linked"><a href="#" id="change-nick">Change Nickname</a></li>
           </ul>
 
           <h3>Who's Online</h3>
