--- a/index.html
+++ b/index.html
@@ -9,25 +9,19 @@
   </head>
 
   <body>
+    <div id="page" class="page"></div>
     <div id="layout" class="layout">
       <div id="navigation" class="navigation">
-        <h3>Collab</h3>
+        <h1>Collab</h1>
+        <h3>Settings</h3>
         <ul class="list-group">
-          <li class="list-group-item linked"><a href="https://github.com/dennis84/vim-collab">VIM Plugin</a></li>
-          <li class="list-group-item linked"><a href="https://github.com/dennis84/collab">Source Code</a></li>
+          <li class="list-group-item">Follow Cursor <input id="follow" type="checkbox" class="pull-right"></li>
+          <li class="list-group-item">Online <span id="online" class="label label-primary pull-right"></span></li>
+          <li class="list-group-item"><a href="#" id="change-nick">Change Nickname</a></li>
         </ul>
 
-        <div id="settings" class="hidden">
-          <h3>Settings</h3>
-          <ul class="list-group">
-            <li class="list-group-item">Follow Cursor <input id="follow" type="checkbox" class="pull-right"></li>
-            <li class="list-group-item">Online <span id="online" class="label label-primary pull-right"></span></li>
-            <li class="list-group-item linked"><a href="#" id="change-nick">Change Nickname</a></li>
-          </ul>
-
-          <h3>Who's Online</h3>
-          <ul id="members" class="list-group"></ul>
-        </div>
+        <h3>Who's Online</h3>
+        <ul id="members" class="list-group"></ul>
       </div>
 
       <div class="editor-wrapper">
