added status view

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </div>
 
       <div class="editor-wrapper">
+        <div id="status" class="status"></div>
         <div id="editor" class="editor">
           <pre id="content" class="content"></pre>
           <div id="powerline" class="powerline">
