--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     <div id="layout" class="layout">
       <div id="navigation" class="navigation">
         <h1>Collab</h1>
-        <h3>Settings</h3>
         <ul class="list-group">
           <li class="list-group-item">Follow Cursor <input id="follow" type="checkbox" class="pull-right"></li>
           <li class="list-group-item">Online <span id="online" class="label label-primary pull-right"></span></li>
@@ -28,9 +27,7 @@
         <div id="status" class="status"></div>
         <div id="editor" class="editor">
           <pre id="content" class="content"></pre>
-          <div id="powerline" class="powerline">
-            <span id="filename" class="filename"></span>
-          </div>
+          <div id="filename" class="filename"></div>
         </div>
       </div>
     </div>
