--- a/index.html
+++ b/index.html
@@ -25,10 +25,7 @@
 
       <div class="editor-wrapper">
         <div id="status" class="status"></div>
-        <div id="editor" class="editor">
-          <pre id="content" class="content"></pre>
-          <div id="filename" class="filename"></div>
-        </div>
+        <div id="editor" class="editor"></div>
       </div>
     </div>
 
